<resources>
    <string name="app_name">Secure Data Sharing For DTN</string>
    <string name="empty" />
    <string name="app_title">Secure Data Sharing For Battlefield DTN</string>
    <string name="button_login">LOGIN</string>
    <string name="button_setup">SETUP</string>
    <string name="label_login_username">Username</string>
    <string name="hint_login_username">Please enter your username</string>
    <string name="label_login_password">Password</string>
    <string name="label_login_setup">Login/Setup</string>
    <string name="snackbar_test_text">data binding test OK</string>
    <string name="test">LOGIN</string>
    <string name="mission_code">Mission <br /> Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>